Fix get tile & cleanup